# direvo_sim

./: README.md  direvo_functions.py  examples_notebook.ipynb  param_sampler.py  requirments.txt  selection_function_library.py  setup.cfg  strategy_sweep.py
PLOS_figures/: PLOS_figures.ipynb  plot_functions.py
direvo_function_archive/: __init__.py  directedevo.py  evo_runs.py  evo_runs_info_funcs.py  populations.py
evaluation/: devo_experi_funcs.py  param_sampler.py  strategy_evaluation.py  utils.py
landscape_arrays/: AAdict.pkl  E2_landscape_array.pkl  E3_landscape_array.pkl  GB1_landscape_array.pkl  GSE153897_Variant_fitness.csv  TrpB_landscape_array.pkl  result_basic_evo.csv
src/direvo/: landscapes.py  strategy_optimize.py
