[metadata]
name = direvo
description = directed evolution
author = Steel Lab
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    direvo
install_requires =
python_requires = >=3.6
package_dir =
    =src
zip_safe = no
[options.package_data]
direvo = data/*